# turtlebot3_stereo_description

./: CMakeLists.txt  README.md  package.xml
urdf/: turtlebot3_burger_stereo.gazebo.xacro  turtlebot3_burger_stereo.urdf.xacro
